Actualizar 2025-11-20-Romanos.md

--- a/_posts/2025-11-20-Romanos.md
+++ b/_posts/2025-11-20-Romanos.md
@@ -541,57 +541,83 @@ actuamos desde una identidad recibida.
 
 # Entonces… ¿qué queda para el alma?
 
-Romanos 1–3 te quita todas las ilusiones que te sostenían…  
+Romanos 1–3 te quita todas las ilusiones que te sostenían…
 y te obliga a mirarte sin filtros.
 
-Te deja a solas con vos mismo,  
-con lo que realmente sos cuando nadie te aplaude,  
-cuando tu moral se agota,  
-cuando tu inteligencia no alcanza,  
+Te deja a solas con vos mismo,
+con lo que realmente sos cuando nadie te aplaude,
+cuando tu moral se agota,
+cuando tu inteligencia no alcanza,
 cuando tu disciplina no te salva.
 
-Ahí, en ese borde donde el yo se ve expuesto, descubrís algo: lo único que puede salvarte no está dentro de vos.
+Ahí, justo en ese borde donde el yo deja de actuar, descubrís algo incómodo y honesto:
+lo único que puede salvarte no está dentro de vos.
 
-Pablo te arranca los apoyos uno por uno no para destruirte, en su lugar para que finalmente soltes aquello que nunca iba a sostener tu peso.
+Pablo te arranca los apoyos uno por uno, no para destruirte,
+sino para que sueltes lo que nunca iba a sostener tu peso.
 
-Y cuando todo acaba, cuando ya no queda excusa ni máscara ni argumento, aparece lo único capaz de hablarle a un ser humano que ha sido reducido a verdad:  
+Y cuando todo acaba, cuando ya no queda excusa, ni máscara, ni argumento, aparece lo único capaz de hablarle a un ser humano que fue reducido a verdad:
 la justicia de Dios.
 
-No esa justicia contable que imaginabas lograr con esfuerzo,  
-ni esa versión "mejorada" de vos mismo que creías poder construir,  
-ni esa espiritualidad de rendimiento que solo alimentaba tu ego.
+No esa justicia que creías poder alcanzar con esfuerzo,
+ni esa versión “mejorada” de vos mismo que querías construir,
+ni esa espiritualidad de rendimiento que solo inflaba tu ego.
 
-Sino un acto divino, externo, previo a vos,  
-por el cual Dios hace justo al injusto  
-y reordena al desordenado.
+Sino un acto divino, externo, previo a vos,
+por el cual Dios endereza lo torcido
+y vuelve a levantar lo que tu orgullo quebró.
 
 Lo que queda para el alma es esto:
+	•	un Dios que no retrocede cuando te ve;
+	•	un Dios que entra a tu miseria sin repugnancia;
+	•	un Dios que sostiene incluso cuando vos ya no podés sostenerte.
 
-- un Dios que endereza al que se torció,  
-- un Dios que vuelve a levantar lo que el orgullo quebró,  
-- un Dios que entra a tu miseria sin repugnancia,  
-- un Dios que, al mirarte, no retrocede.
+Cuando esta verdad deja de ser idea y se integra de verdad, no da calma inmediata.
+Da vértigo.
+Ese vértigo de darte cuenta de que jamás estuviste colgando en el vacío.
 
-Cuando esta verdad deja de ser concepto y se vuelve experiencia,  
-sucede algo decisivo dentro tuyo:
+Porque debajo de tu vida no hay azar, ni absurdo, ni un silencio impersonal:
+hay Dios.
+El Dios que sostiene el ser mismo.
+El Dios que estaba ahí antes de que vos pudieras imaginarlo.
 
-dejás de competir;  
-dejás de compararte;  
-dejás de medir tu valor por tu "rendimiento espiritual"
-o por la versión idealizada de vos mismo que querías sostener.
+Y de pronto comprendés que no fuiste vos quien construyó un suelo para tu alma.
+Dios ya era el fundamento que te sostenía cuando vos seguías actuando autosuficiencia.
 
-Porque entendés, por fin, que tu identidad no se construye, se recibe.
+Y cuando lo ves, cuando intuís a Dios, el alma hace algo imposible de fingir: se rinde.
+No por derrota, sino porque reconoce por fin a Aquel ante quien todo ser descansa.
 
-Ya no luchás por mantener en pie un yo que siempre estuvo fracturado.  
-Ya no tratás de salvarte con tus manos temblorosas.
+Entonces lo que llamabas "fortaleza" se revela como cansancio acumulado;
+lo que llamabas "estar mejorando" no era cambio real:
+era solo convencerte de que el esfuerzo tapaba el vacío;
+y lo que llamabas "autonomía" era, en el fondo, la costumbre de sostenerte solo
+sin admitir que estabas agotado.
 
-La justicia que necesitabas ya vino hacia vos.  
-Te encontró.  
-Te cubrió.  
-Te está reconstruyendo desde adentro.
+Tal vez por orgullo nos negábamos a aceptar que estábamos cansados
+y que necesitábamos a Alguien que nos sostuviera.
 
-Romanos 1–3 no te destruye para humillarte.  
-Te destruye para liberarte.  
-Te deja sin nada, sí…  
-pero solo para entregarte lo único que nunca se gastará:  
-la justicia de Dios que te vuelve a crear.
+Pero en ese desmoronamiento aparece algo nuevo:
+la justicia que viene hacia vos cuando ya no tenés nada que ofrecer.
+
+Romanos 1–3 no te destruye para aplastarte;
+te destruye para sacarte de la película en la que te escondías.
+Te deja sin nada, sí,
+pero es un "nada" que abre espacio para ver lo que evitaste durante años:
+que no estabas flotando en el vacío,
+que la vida no es un absurdo,
+que siempre hubo Alguien sosteniéndote.
+
+Y ese instante, mínimo, silencioso, casi desapercibido,
+en el que dejás de imaginar a Dios
+y empezás a sospechar que Él te sostuvo desde siempre,
+cambia algo adentro.
+
+Porque ahí entendés que la justicia de Dios no llega para convertirte en alguien “mejor”,
+ni para que te sientas espiritual,
+ni para que finjás que todo está bien.
+
+Llega para darte un punto firme donde volver a pararte.
+Para reconstruirte,
+desde adentro,
+y sin exigirte que seas alguien distinto antes de tiempo.
+
