Actualizar 2025-11-20-Romanos.md

--- a/_posts/2025-11-20-Romanos.md
+++ b/_posts/2025-11-20-Romanos.md
@@ -620,7 +620,7 @@ Pero Pablo no se queda en la explicación. Te guía a una verdad que parece obvi
 “Porque no son los oidores de la Ley los justos ante Dios, sino que los hacedores de la Ley serán justificados”.
 En otras palabras: comprender Romanos 1–3 te ubica en la verdad, sí, pero no te cambia hasta que esa verdad empieza a abrirse paso en tu vida real. Y es ahí, en ese punto exacto donde convergen teoría y existencia, donde comienza el trabajo del alma.
 
-Agradezco a Eduardo José Flores Sauceda por su obra La Palabra Preservada, cuyo rigor y claridad en el estudio del texto griego fueron una guía valiosa mientras escribía esta reflexión sobre Romanos. Este libro, que me compartió un amigo, me ayudó a comprender mejor el trasfondo textual de la epístola y a mirar el mensaje con mayor nitidez. Todo reconocimiento merece ser dado donde corresponde.
+Agradezco a Eduardo José Flores Sauceda por su obra La Palabra Preservada, cuyo rigor y claridad en el estudio del texto griego fueron una guía valiosa mientras escribía esta reflexión sobre Romanos. Este libro, que me compartió un amigo, me ayudó a comprender mejor el trasfondo textual de la epístola y a mirar el mensaje con mayor nitidez. Todo reconocimiento merece ser dado donde corresponde
 
 Prácticas para el alma
 
