Add continuation note to Trinidad post
Added a continuation note and link to previous text.

--- a/_posts/2025-12-05-Trinidad.md
+++ b/_posts/2025-12-05-Trinidad.md
@@ -9,6 +9,10 @@ categories: [filosofia]
 
 Una vez concluimos que, efectivamente, existe un ser necesario, exploramos la siguiente idea: ¿Qué tipo de ser necesario existe? ¿Uno solitario? ¿Uno impersonal?
 
+Este texto continúa la reflexión iniciada en *El fundamento o el abismo: por qué negar un ser necesario también es una fe*, donde examino las tres únicas posibilidades metafísicas ante la pregunta: "¿por qué existe algo en vez de nada?".  
+
+**→ Podés leer esa primera parte aquí: [El fundamento o el abismo](https://carlosmvks1.github.io/filosofia/2025/10/12/SN.html)**.
+
 Exploremos: ¿Qué tipo de realidad puede existir por sí misma y al mismo tiempo ser perfecta? Sin causa, sin comienzo, sin composición, sin necesidad de otro.
 
 ¿Cuál es la única ontología coherente para un Ser necesario?
