Expand on living from God's love and its implications
Juan describes how living in God's love transforms one's life through light, perseverance, and costly love, emphasizing the importance of honesty, commitment, and the true nature of love.

--- a/_posts/2025-12-11-Juan.md
+++ b/_posts/2025-12-11-Juan.md
@@ -152,3 +152,17 @@ Juan cierra su carta aclarando *"Les he escrito estas cosas a ustedes que creen 
 Esa vida, insiste Juan, está ligada de forma absoluta a una Persona: *"El que tiene al Hijo tiene la vida; el que no tiene al Hijo de Dios no tiene la vida"* (1 Jn 5:12). No hay términos intermedios. Para Juan, la vida no se posee por acumulación de virtudes ni por claridad intelectual, sino por **pertenencia real**, tener al Hijo es tener la vida; no tenerlo es carecer de ella.
 
 Por eso Juan termina con una advertencia *"Hijitos, cuídense de los ídolos. Amén"* (1 Jn 5:21). Porque el ídolo peligroso, **no niega la vida, la imita**. Promete lo que solo Dios puede dar y, al hacerlo, sustituye la fuente por una copia. El ídolo puede tomar la forma del control, de la razón autosuficiente, de la imagen, incluso de una versión "domesticada" de Dios. Juan no teme tanto al error abierto (Pecado) como a la sustitución silenciosa. Cuidarse de los ídolos es, en última instancia, **guardar la vida donde realmente está**.
+
+## Entonces, ¿Cómo actúa alguien que vive desde ese amor?
+
+Si Dios es amor y habita en nosotros, entonces su presencia no puede quedar como una idea privada, **se vuelve un principio activo que reordena la vida**. No porque el creyente se vuelva impecable, sino porque la vida de Dios introduce una dirección nueva. Juan no propone un amor emocional; describe un amor que, por ser vida, **expulsa la lógica de la muerte**. Y esa expulsión se reconoce en actos concretos.
+
+Primero, **vive en la luz**. Eso significa que no usa la fe para esconderse. El amor de Dios no produce una espiritualidad que tapa, más bien produce una espiritualidad que revela, que se deja exponer, se deja corregir, se deja limpiar. Por eso el primer gesto del que vive desde el amor no es "sentirse bien", sino **dejar de mentirse**. Confiesa el pecado, no lo negocia; llama al mal por su nombre, no lo rebautiza con palabras elegantes, no lo justifica. La luz no humilla por crueldad, **hiere para sanar**. Donde la presencia de Dios está operando, la mentira se vuelve insoportable y la confesión se vuelve el umbral de la restauración.
+
+Segundo, **permanece**. El amor cristiano no es un impulso que aparece cuando hay energía, ni una virtud que funciona solo en días buenos. Permanecer es quedarse cuando sería más fácil huir, quedarse en Cristo cuando el resentimiento pide tomar el control; quedarse en la verdad cuando la imagen pide maquillar; quedarse en la obediencia cuando el deseo exige una excusa. Por eso Juan une "permanecer" con "andar", el que dice que permanece en Él **aprende a caminar como Él caminó**. No es perfección instantánea, es **dirección sostenida**. Un amor que no persevera termina siendo solo sensibilidad; y una perseverancia sin amor termina siendo solo dureza.
+
+Tercero, **el amor se vuelve costoso**. Juan define el amor desde la cruz como una acción que asume la gravedad del mal y paga un precio real para enfrentarlo. Por eso, donde Dios habita, el amor deja huella; Cede tiempo, comodidad, recursos, orgullo, control. Se traduce en obras, no porque las obras compren a Dios, sino porque la vida de Dios, cuando está presente, **inevitablemente actúa**. Si alguien puede cerrar el corazón sin conflicto interno ante la necesidad del hermano, Juan no lo suaviza, no es un pequeño detalle el que falta; es que el amor de Dios no está permaneciendo ahí como vida operante.
+
+Cuarto, ese amor **no confunde amor con ingenuidad**. Puede poner límites. Puede tomar distancia. Puede negar acceso a quien persiste en el daño. Pero aquí está el punto donde la fe se vuelve real, el amor cristiano no solo decide "qué relación es posible", sino **qué corazón será permitido**. Puede decir "no vuelvo a esa mesa"; pero no puede decir "ojalá desaparezcas". Puede buscar justicia; pero no puede usar la justicia como máscara para el desprecio. Porque cuando la distancia nace del deseo de castigo, o de la secreta complacencia por la caída del otro, ya no es prudencia, es muerte refinada. Y Juan no negocia con eso. El que no ama permanece en la muerte ¿Cierto?.
+
+Así que la respuesta final a la pregunta no es abstracta, es verificable: alguien que vive desde ese amor **camina en la luz (sin autoengaño), permanece en Cristo (sin abandonar el camino), y ama de manera costosa (sin quedarse en intención)**. No siempre puede restaurar una relación, pero siempre resiste la lógica de la muerte. No siempre puede evitar el dolor, pero sí puede evitar lo peor, **que el dolor lo convierta en alguien incapaz de amar**.
